# olt-autoprovisioning

./: .dockerignore  .env.example  .gitignore  Dockerfile  add_vlan_2918_uplink.py  add_vlan_2918_v2.py  add_vlan_uplink.py  alembic.ini  analyze_olt.py  check_both_onus.py  check_ip_final.py  check_olt_version.py  check_working_onu.py  debug_pppoe.py  deploy.py  deploy.sh  deploy_bss_routes.py  deploy_docker.py  deploy_docker_local.py  deploy_final.py  deploy_fix.py  deploy_native.py  deploy_native_final.py  deploy_optical_fix.py  deploy_pppoe_fix.py  deploy_restart.py  deploy_root.py  deploy_to_new_server.py  deploy_wifi_fix.py  docker-compose.yml  docker-entrypoint.sh  fix_and_rebuild.py  fix_olt_network.py  fix_onu3_config.py  fix_onu3_correct.py  migrate_enable_pw.py  olt_check_acs.py  olt_check_profiles.py  olt_check_syntax.py  olt_diagnostics.py  (+13 more)
alembic/: env.py
alembic/versions/: 0001_add_others_model_and_olt_description.py  0002_add_alarms_tickets_technicians.py  0003_alarm_ticket_set_null_on_delete.py  0004_users_and_customers.py
app/: config.py  dependencies.py  main.py
app/api/: middleware.py  router.py
app/db/: session.py
app/models/: __init__.py  alarm.py  audit_log.py  bandwidth_profile.py  base.py  customer.py  notification.py  olt.py  onu.py  service_profile.py  user.py  vlan.py
app/notifications/: email_service.py  notify.py  sms_service.py  whatsapp_service.py
docs/: API_DOCUMENTATION.md  api-documentation.html  bss-portal.html  executive-summary.html  index.html  manifest.json  simulator.html  sw.js
scripts/: seed_users.py
(+41 files in other folders)
